# Information-Retrivel-Sytem

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  template.py
research/: trials.ipynb
src/: helper.py
